[tool.poetry]
name = "weatherstack"
version = "0.1.0"
description = "A Python wrapper around WeatherStack APIs"
authors = ["Morgan Kilgore <mkilgore301@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.0"
pydantic = "^1.7.2"

[tool.poetry.dev-dependencies]
pydantic = "^1.7.2"
requests = "^2.25.0"
responses = "^0.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
